# psr-sb-gui

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
psr_sb_gui/: __main__.py  app.py  wizard.py
psr_sb_gui/models/: observation.py
psr_sb_gui/pages/: flux_cal_page.py  freq_mode_page.py  params_page.py  preview_page.py  save_page.py  source_page.py
